Fix: Not blurry dropdown

--- a/styles/tippy.css
+++ b/styles/tippy.css
@@ -58,7 +58,7 @@
 
 .tippy-box[data-theme="pixelsplace_dropdown"] {
     background: var(--frosted-glass);
-    backdrop-filter: var(--frosted-glass-blur);
+    backdrop-filter: unset;
     border-radius: 12px;
     user-select: none;
     cursor: pointer;
@@ -66,6 +66,11 @@
     box-shadow: var(--shadow);
     padding: 0;
 
+    .tippy-content {
+        border-radius: 12px;
+        backdrop-filter: var(--frosted-glass-blur);
+    }
+    
     .tippy-content > * {
         display: flex;
         flex-direction: column;
